# LogicProMCP-for-Codex

./: .gitignore  README.md  pyproject.toml
LogicProExtension/: LogicProMCPBridgeSketch.swift  README.md
LogicProMCPBridgeHost/LogicProMCPBridgeHost/: ContentView.swift  LogicProMCPBridgeHostApp.swift  ValidationView.swift
LogicProMCPBridgeHost/LogicProMCPBridgeHost.xcodeproj/: project.pbxproj
LogicProMCPBridgeHost/LogicProMCPBridgeHost/Common/: TypeAliases.swift
LogicProMCPBridgeHost/LogicProMCPBridgeHost/Common/Audio/: SimplePlayEngine.swift
LogicProMCPBridgeHost/LogicProMCPBridgeHost/Model/: AudioUnitHostModel.swift  AudioUnitViewModel.swift
LogicProMCPBridgeHost/LogicProMCPBridgeHostExtension/: Info.plist  LogicProMCPBridgeConnector.swift  LogicProMCPBridgeHostExtension.entitlements  README.md
LogicProMCPBridgeHost/LogicProMCPBridgeHostExtension/Common/: LogicProMCPBridgeHostExtension-Bridging-Header.h
LogicProMCPBridgeHost/LogicProMCPBridgeHostExtension/DSP/: LogicProMCPBridgeHostExtensionDSPKernel.hpp
LogicProMCPBridgeHost/LogicProMCPBridgeHostExtension/Parameters/: LogicProMCPBridgeHostExtensionParameterAddresses.h  Parameters.swift
LogicProMCPBridgeHost/LogicProMCPBridgeHostExtension/UI/: LogicProMCPBridgeHostExtensionMainView.swift  MomentaryButton.swift  ParameterSlider.swift
docs/: ARCHITECTURE.md  LOGIC_EXTENSION.md
examples/: claude_desktop_config.json  funky_bass.mid
src/logicpromcp/: __init__.py  bridge.py  cli.py  midi.py  server.py
tests/: test_bridge.py  test_midi.py
(+10 files in other folders)
